# N64-SpyDVI

./: LICENSE  README.md
3D Files/: N64 Bracket.stl  N64 SpyDVI QSB_1_0.step
Hardware/Main/V2_0/: SpyDVIBoardOutline.dxf
Hardware/Main/V2_0/Fabrication/: PickAndPlace_N64 SpyDVI_2024-02-16.csv
Hardware/Main/V2_1/Fabrication/: BOM_N64 SpyDVI_2024-02-23.csv  PickAndPlace_N64 SpyDVI_2024-02-24.csv
Hardware/Main/V2_2/Fabrication/: BOM_N64 SpyDVI_2024-02-24.csv  PickAndPlace_N64 SpyDVI_2024-02-24.csv
Hardware/Main/V2_2/Project/: PCB_N64 SpyDVI_2024-02-24.json
Hardware/Main/V2_4/Fabrication/: BOM_N64 SpyDVI_N64 SpyDVI_2024-08-21.xlsx  PickAndPlace_N64 SpyDVI_2024-08-21.xlsx
Hardware/Ribbon/: readme.md
Hardware/V1_0/Fabrication/: PickAndPlace_N64 SpyDVI_2024-02-09.csv
Hardware/V1_1/Fabrication/: BOM_N64 SpyDVI_2024-02-09.csv
Hardware/V1_1/Project/: 1-PCB_N64 SpyDVI.json  1-Schematic_N64 SpyDVI.json
Hardware/V2_0/Fabrication/: BOM_N64 SpyDVI_2024-02-16.csv
Hardware/V2_0/Project/: PCB_N64 SpyDVI_2024-02-16.json  SCH_N64 SpyDVI_2024-02-16.json
Hardware/V2_1/Project/: PCB_N64 SpyDVI_2024-02-24.json  SCH_N64 SpyDVI_2024-02-24.json
Hardware/V2_2/Project/: SCH_N64 SpyDVI_2024-02-24.json
Software/: CMakeLists.txt  README.md
Software/apps/: CMakeLists.txt
Software/apps/spydvi/: CMakeLists.txt  config.c  config.h  gfx.c  gfx.h  joybus.c  joybus.h  joybus.pio  main.c  n64.pio  osd.c  osd.h
Software/include/: common_dvi_pin_configs.h
Software/libdvi/: audio_ring.c  audio_ring.h  data_packet.c  data_packet.h  dvi.c  dvi.h  dvi_timing.c
(+10 files in other folders)
